--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "modernizr": "^3.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "react-router": "^1.0.0"
+    "react-router": "^1.0.0",
+    "rx": "^4.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.1.21",
